# CGFromScratch

./: .gitignore  CGFromScratch.kdev4  CMakeLists.txt
.kdev4/: CGFromScratch.kdev4
src/: float_limits_def.h  geometry.cpp  geometry.h  main.cpp  open_obj.cpp  open_obj.h  test_geometry.cpp  test_open_obj.cpp
